[gd_scene load_steps=6 format=3 uid="uid://bjwl4ygsr211v"]

[ext_resource type="PackedScene" uid="uid://b1o8o233dwg3s" path="res://scene/paddle_simple.tscn" id="2_jci2v"]
[ext_resource type="Script" uid="uid://bi25rhrsu2r0n" path="res://script/3paddles_simple.gd" id="2_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jci2v"]
radius = 119.403

[sub_resource type="CircleShape2D" id="CircleShape2D_iiedg"]
radius = 120.241

[sub_resource type="CircleShape2D" id="CircleShape2D_0ir4w"]
radius = 120.416

[node name="3Paddles" type="Node2D"]
script = ExtResource("2_script")

[node name="Paddle1Area" type="Area2D" parent="."]
position = Vector2(-250, 0)

[node name="Paddle1" parent="Paddle1Area" instance=ExtResource("2_jci2v")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle1Area"]
position = Vector2(0, -100)
shape = SubResource("CircleShape2D_jci2v")

[node name="Paddle2Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle2Area"]
position = Vector2(-2, 99)
shape = SubResource("CircleShape2D_iiedg")

[node name="Paddle2" parent="Paddle2Area" instance=ExtResource("2_jci2v")]
position = Vector2(0, 200)

[node name="Paddle3Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle3Area"]
position = Vector2(250, -101)
shape = SubResource("CircleShape2D_0ir4w")

[node name="Paddle3" parent="Paddle3Area" instance=ExtResource("2_jci2v")]
position = Vector2(250, 0)
